# AntTP

./: .gitignore  .output.txt  Cargo.toml  Dockerfile.cross  README-cross-compile.md  README.md  access_list.json  bookmarks.json  build.rs  build_errors_2.txt  build_errors_head.txt  cross-compile-all.sh  cross-compile-docker-fix.sh  cross-compile-windows.bat  fix-target-and-compile.bat  fix-target-and-compile.sh  install-mingw.bat  test_results.txt  test_results_v2.txt  test_results_v3.txt  test_results_v4.txt  test_results_v5.txt  test_results_v6.txt  test_results_v7.txt
.github/workflows/: ci.yml  rust.yml
.junie/: guidelines.md
crunchy-fix/: Cargo.toml  build.rs
crunchy-fix/src/: lib.rs
docs/: archive.md  background.md  build_run.md  configuration.md  grpc.md  mcp.md  pnr.md  publish_website.md  rest.md  roadmap.md  web_app.md
docs/data_types/: archives.md  chunks.md  files.md  pnr.md  pointers.md  registers.md
proto/: archive.proto  chunk.proto  crypto.proto  graph.proto  key_value.proto  pnr.proto  pointer.proto  private_scratchpad.proto  public_archive.proto  public_data.proto  public_scratchpad.proto  register.proto  resolver.proto  scratchpad.proto  tarchive.proto
resources/: app-conf.json
spec/: 00007_create_public_scratchpad_mcp_tool.txt  00009_create_public_archive_mcp_tool.txt  00011_create_private_scratchpad_mcp_tool.txt  00013_create_grpc_service_handler_for_pointer_operations.txt  00015_create_grpc_service_handler_for_register_operations.txt  00016_create_grpc_service_handler_for_graph_operations.txt  00018_create_grpc_service_handler_for_chunk_operations.txt  00021_create_grpc_service_handler_for_command_operations.txt  00022_create_grpc_service_handler_for_pnr_operations.txt  00025_create_grpc_service_handler_for_public_data_operations.txt  00027_create_grpc_service_handler_for_public_archive_operations.txt  00028_create_grpc_service_handler_for_private_scratchpad_operations.txt  00029_create_grpc_service_handler_for_public_scratchpad_operations.txt  00035_add_support_to_create_and_update_tarchives_over_the_rest_interface.txt  00038_create_grpc_service_handler_for_tarchive_operations.txt  00039_create_tarchive_mcp_tool.txt  00041_create_postman_collection_for_using_all_rest_endpoints.txt  00044_add_cli_option_for_disabling_mcp_tools.txt  00045_add_cli_option_for_disabling_grpc_handlers.txt  00046_add_pnr_zone_update_support.txt  00048_add_newman_to_the_github_build_workflow.txt  00049_replace_x_cache_only_header.txt  00054_add_pnr_zone_get_support.txt  00056_fix_failing_unit_tests_in_pointer_service_and_improve_coverage.txt  00058_add_get_pnr_support_to_grpc_apis.txt  00060_add_get_pnr_support_to_mcp_apis.txt  00061_add_update_pnr_support_to_grpc_apis.txt  00063_add_update_pnr_support_to_mcp_tool_api.txt  00066_refactor_caching_client.txt  00069_add_unit_tests_for_chunk_service_by_mocking_chunk_caching_client.txt  00070_add_unit_tests_for_register_service_by_mocking_register_caching_client.txt  00071_add_unit_tests_for_public_archive_service.txt  00072_add_unit_tests_for_fileservice_by_mocking_chunkcachingclient_and_cachingclient.txt  00073_add_unit_tests_for_resolverservice_by_mocking_resolverclient.txt  00074_add_unit_tests_for_pointer_name_resolver.txt  00074_add_unit_tests_for_pointernameresolver.txt  00079_improve_html_directory_listing_for_archives.txt  00081_improve_documentation_by_refactoring_into_multiple_documents.txt  00084_update_public_and_private_scratchpad_post_endpoints_to_take_the_name_from_json_payload_instead_of_path.txt  00086_store_pnr_zone_records_as_a_key_value_map_to_easily_resolve_a_sub_name_to_an_address.txt  (+60 more)
src/: anttp_config.rs  archive_client.rs  archive_helper.rs  archive_service.rs  caching_client.rs  chunk_receiver.rs  chunk_sender.rs  chunk_service.rs  file_client.rs  file_service.rs  lib.rs  main.rs
src/chunk/: chunk_sender.rs  chunk_service.rs  mod.rs
src/client/: archive_caching_client.rs  cache_item.rs  caching_client.rs  chunk_caching_client.rs  client_harness.rs  error.rs  graph_entry_caching_client.rs  mod.rs  pointer_caching_client.rs  public_archive_caching_client.rs  public_caching_client.rs  public_data_caching_client.rs  register_caching_client.rs  scratchpad_caching_client.rs  streaming_client.rs  tarchive_caching_client.rs
src/command/: error.rs  executor.rs  mod.rs
src/config/: access_list.rs  anttp_config.rs  app_config.rs  mod.rs
src/controller/: archive_controller.rs  chunk_controller.rs  command_controller.rs  connect_controller.rs  crypto_controller.rs  file_controller.rs  graph_controller.rs  key_value_controller.rs  mod.rs  pnr_controller.rs  pointer_controller.rs  private_scratchpad_controller.rs  public_archive_controller.rs  public_data_controller.rs  public_scratchpad_controller.rs  register_controller.rs  resolver_controller.rs  scratchpad_controller.rs  tarchive_controller.rs
src/error/: archive_error.rs  chunk_error.rs  graph_error.rs  mod.rs  pointer_error.rs  public_archive_error.rs  public_data_error.rs  register_error.rs  scratchpad_error.rs  tarchive_error.rs
src/grpc/: archive_handler.rs  chunk_handler.rs  command_handler.rs  crypto_handler.rs  graph_handler.rs  key_value_handler.rs  mod.rs  pnr_handler.rs  pointer_handler.rs  private_scratchpad_handler.rs  public_archive_handler.rs  public_data_handler.rs  public_scratchpad_handler.rs  register_handler.rs  resolver_handler.rs  tarchive_handler.rs
src/tool/: mod.rs  (+16 more)
(+99 files in other folders)
