[package]
name = "anttp"
version = "0.16.2"
edition = "2024"
authors = ["Paul Green"]
description = "AntTP is an HTTP server for the Autonomi Network"
readme = "README.md"
repository = "https://github.com/traktion/AntTP"
license = "GPL-3.0"
keywords = ["autonomi", "http", "proxy", "gateway"]
categories = ["web-programming", "web-programming::http-server", "network-programming"]
exclude = [".github", ".gitignore", "cache/", "target/", "test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-http = { version = "3.11.0", default-features = false, features = ["http2", "compress-gzip"] }
actix-web = { version = "4.11.0", default-features = false, features = ["cookies", "macros", "secure-cookies", "compress-brotli", "compress-gzip"] }
actix-multipart = "0.7.2"
async_job = "0.1.4"
log = "0.4.27"
env_logger = "0.11.8"
serde = "1.0.219"
serde_json = "1.0.140"
autonomi = "=0.6.1"
ant-evm = "=0.1.17"
xor_name = "5.0.0"
hex = "0.4.3"
globset = "0.4.16"
mime = "0.3.17"
chrono = "0.4.41"
futures-util = "0.3.31"
tokio = "1.45.0"
rmp-serde = "1.3.0"
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive", "string"] }
chunk-streamer = "0.4.5"
uuid = "1.17.0"
base64 = "0.22.1"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
once_cell = "1.21.3"
foyer = "0.19"
async-trait = "0.1.88"
sanitize-filename = "0.6.0"
sha2 = "0.10.9"
indexmap = "2.11.4"
rand = "0.9.2"