[package]
name = "anttp"
version = "0.18.2"
edition = "2024"
authors = ["Paul Green"]
description = "AntTP is an HTTP server for the Autonomi Network"
readme = "README.md"
repository = "https://github.com/traktion/AntTP"
license = "GPL-3.0"
keywords = ["autonomi", "http", "proxy", "gateway"]
categories = ["web-programming", "web-programming::http-server", "network-programming"]
exclude = [".github", ".gitignore", "cache/", "target/", "test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-http = { version = "3.11", default-features = false, features = ["http2", "compress-gzip"] }
actix-web = { version = "4.11", default-features = false, features = ["cookies", "macros", "secure-cookies", "compress-brotli", "compress-gzip", "rustls-0_23"] }
actix-multipart = "0.7"
async_job = "0.1.4"
log = "0.4"
env_logger = "0.11.8"
serde = "1.0"
serde_json = "1.0"
autonomi = "=0.6.3"
ant-evm = "=0.1.17"
xor_name = "5.0.0"
hex = "0.4"
globset = "0.4"
mime = "0.3"
chrono = "0.4"
futures-util = "0.3"
tokio = "1.48"
rmp-serde = "1.3"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "string"] }
chunk-streamer = "0.4.7"
uuid = "1.18"
base64 = "0.22"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
once_cell = "1.21"
foyer = "0.19"
async-trait = "0.1"
sanitize-filename = "0.6"
sha2 = "0.10"
indexmap = "2.11"
rand = "0.9"
thiserror = "2.0"
async-stream = "0.3.6"
rustls = { version = "0.23.35", default-features = false }
rustls-pemfile = "2.2.0"
rcgen = "0.14.5"
futures-core = "0.3.31"