[package]
name = "anttp"
version = "0.24.7"
edition = "2024"
authors = ["Paul Green"]
description = "AntTP is an HTTP server for the Autonomi Network"
readme = "README.md"
repository = "https://github.com/traktion/AntTP"
license = "GPL-3.0"
keywords = ["autonomi", "http", "proxy", "gateway"]
categories = ["web-programming", "web-programming::http-server", "network-programming"]
exclude = [".github", ".gitignore", "cache/", "target/", "test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-http = { version = "3.11", default-features = false, features = ["http2", "compress-gzip"] }
actix-web = { version = "4.11", default-features = false, features = ["cookies", "macros", "secure-cookies", "compress-brotli", "compress-gzip", "rustls-0_23"] }
actix-multipart = "0.7"
async_job = "0.1.4"
log = "0.4"
env_logger = "0.11.8"
serde = "1.0"
serde_json = "1.0"
autonomi = "=0.10.0"
ant-evm = "=0.1.20"
xor_name = "5.0.0"
ant-protocol = "1.0.12"
hex = "0.4"
globset = "0.4"
mime = "0.3"
chrono = "0.4"
futures-util = "0.3"
tokio = "1.48"
rmp-serde = "1.3"
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "string"] }
chunk-streamer = "0.5.4"
uuid = "1.18"
base64 = "0.22"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
once_cell = "1.21"
foyer = "0.19"
async-trait = "0.1"
sanitize-filename = "0.6"
tar = "0.4"
sha2 = "0.10"
indexmap = "2.11"
rand = "0.9"
thiserror = "2.0"
tempfile = "3"
async-recursion = "1.1"
async-stream = "0.3.6"
tonic = { version = "0.12", features = ["router"], optional = true }
prost = { version = "0.13", optional = true }
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
rcgen = "0.14.5"
futures-core = "0.3.31"
rmcp = { version = "0.12.0", features = ["transport-streamable-http-server-session"] }
rmcp-actix-web = "0.9.1"
schemars = "0.9.0"
mockall = "0.14"
mockall_double = "0.3"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:prost", "dep:tonic-build"]